js/src/tests/test262/built-ins/Error/prototype/stack/setter-creates-own-property.js




























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var errors = [];
for (var i = 0; i < allErrorConstructors.length; ++i) {
  var Ctor = allErrorConstructors[i];
  errors.push([Ctor.name, makeNativeError(Ctor, true)]);
}

for (var i = 0; i < errors.length; ++i) {
  var name = errors[i][0];
  var err = errors[i][1];

  assert.sameValue(
    Object.prototype.hasOwnProperty.call(err, 'stack'),
    false,
    name + ': precondition: instance has no own "stack" property at construction'
  );

  var result = set.call(err, 'sentinel-' + name);
  assert.sameValue(result, undefined, name + ': setter returns undefined');

  verifyProperty(err, 'stack', {
    value: 'sentinel-' + name,
    writable: true,
    enumerable: true,
    configurable: true,
  });
}



var plain = {};
set.call(plain, 'on-plain');
verifyProperty(plain, 'stack', {
  value: 'on-plain',
  writable: true,
  enumerable: true,
  configurable: true,
});

reportCompare(0, 0);
